--- a/site/sample.html
+++ b/site/sample.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Coursera is Cool!</title>
+	<title> welcome to tech enthusiast</title>
 </head>
 <body>
-Coursera is so COOL! I am learning SO much!
+	welcome to tech enthusiast
+
 </body>
 </html>
