twitter bootstrap just started

--- a/site/sample.html
+++ b/site/sample.html
@@ -4,7 +4,7 @@
 	<title> welcome to tech enthusiast</title>
 </head>
 <body>
-	welcome to tech enthusiast
-
+	
+iam mayur, the enthusiast. i welcome you all enthusiasts to my channel tech enthusiast
 </body>
 </html>
