--- a/assignment-solutions/module-2-solutions/index.html
+++ b/assignment-solutions/module-2-solutions/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Assignment solution module-2</title>
-<link rel="stylesheet" href="myStyles.css">
+<link rel="stylesheet" href="css\styles.css">
 </head>
 
 <body>
